expectedLabelColors changed to list of