@@ -8,7 +8,6 @@ import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -24,7 +23,7 @@ public class GetALabelsOnBoardTest extends BaseTest {
     @Test
     public void getLabelsOnBoard() {
         List<String> labelNames = labelRestTestClient.getLabelOnABoard(boardId).stream().map(CreateLabelResponse::getColor).collect(Collectors.toList());
-        List<String> expectedLabelColors = Arrays.asList("blue", "green", "orange", "purple", "red", "yellow");
+        List<String> expectedLabelColors = List.of("blue", "green", "orange", "purple", "red", "yellow");
         Assert.assertFalse(labelNames.isEmpty(), "Label list is empty.");
         Assert.assertTrue(labelNames.containsAll(expectedLabelColors), "Not all expected label colors are found.");
     }
